endeavoru: add voltage control (from n3ocort3x's endeavoru_3.14 git) (thanks to n3ocort3x, maxwen, faux123) Change-ID: 9eac86a5f9e18fa3abb811bfde42a39ed29fc698
Conflicts:
	arch/arm/configs/cyanogenmod_endeavoru_defconfig

--- a/arch/arm/configs/cyanogenmod_endeavoru_defconfig
+++ b/arch/arm/configs/cyanogenmod_endeavoru_defconfig
@@ -378,6 +378,7 @@ CONFIG_RIL_FTRACE_DEBUG_SOCK_IOCTL=y
 # CONFIG_SENSE_4_PLUS is not set
 CONFIG_MEMORY_FOOTPRINT_DEBUGGING=y
 # CONFIG_HTC_PERFORMANCE_MONITOR_ALWAYS_ON is not set
+CONFIG_VOLTAGE_CONTROL=y
 
 #
 # Processor Type
