--- a/arch/arm/configs/cyanogenmod_endeavoru_defconfig
+++ b/arch/arm/configs/cyanogenmod_endeavoru_defconfig
@@ -379,6 +379,7 @@ CONFIG_RIL_FTRACE_DEBUG_SOCK_IOCTL=y
 CONFIG_MEMORY_FOOTPRINT_DEBUGGING=y
 # CONFIG_HTC_PERFORMANCE_MONITOR_ALWAYS_ON is not set
 CONFIG_VOLTAGE_CONTROL=y
+CONFIG_TEGRA_3D_GPU_OVERCLOCK_520=y
 
 #
 # Processor Type
