--- a/arch/arm/configs/custom_sense_defconfig
+++ b/arch/arm/configs/custom_sense_defconfig
@@ -178,14 +178,13 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_ROW=y
+#CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="row"
-
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -322,8 +321,10 @@ CONFIG_TEGRA_SYSTEM_DMA=y
 CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_FIQ_DEBUGGER=y
 CONFIG_TEGRA_EMC_SCALING_ENABLE=y
+# CONFIG_VOLTAGE_CONTROL is not set
 CONFIG_TEGRA_CPU_DVFS=y
 CONFIG_TEGRA_CORE_DVFS=y
+# CONFIG_TEGRA_3D_GPU_OVERCLOCK_520 is not set
 CONFIG_TEGRA_IOVMM_SMMU=y
 # CONFIG_TEGRA_IOVMM_SMMU_SYSFS is not set
 CONFIG_TEGRA_IOVMM=y
@@ -350,6 +351,7 @@ CONFIG_TEGRA_BB_XMM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER2=m
 CONFIG_HTC_SIMHOTSWAP=y
 CONFIG_REMOVE_HSIC_L3_STATE=y
+# CONFIG_TEGRA_LP1_950 is not set
 CONFIG_HTC_HEADSET_MGR=y
 # CONFIG_HTC_HEADSET_H2W is not set
 CONFIG_HTC_HEADSET_GPIO=y
@@ -362,7 +364,6 @@ CONFIG_RAWCHIP_ENABLE=y
 CONFIG_TEGRA_PLLM_RESTRICTED=y
 # CONFIG_TEGRA_WDT_RECOVERY is not set
 CONFIG_ANDROID_RAM_CONSOLE_APPEND_PMIC_STATUS_BITS=y
-CONFIG_CMDLINE_OPTIONS=y
 CONFIG_TEGRA_LP2_ARM_TWD=y
 CONFIG_TEGRA_SLOW_CSITE=y
 # CONFIG_TEGRA_PREINIT_CLOCKS is not set
@@ -375,7 +376,7 @@ CONFIG_HTC_USB_NOTIFIER=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_QCT_9K_MODEM is not set
 CONFIG_RIL_FTRACE_DEBUG_SOCK_IOCTL=y
-# CONFIG_SENSE_4_PLUS is not set
+CONFIG_SENSE_4_PLUS=y
 CONFIG_MEMORY_FOOTPRINT_DEBUGGING=y
 # CONFIG_HTC_PERFORMANCE_MONITOR_ALWAYS_ON is not set
 CONFIG_VOLTAGE_CONTROL=y
@@ -401,7 +402,7 @@ CONFIG_CPU_CP15_MMU=y
 # Processor Features
 #
 CONFIG_ARM_THUMB=y
-CONFIG_ARM_THUMBEE=y
+# CONFIG_ARM_THUMBEE is not set
 CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
@@ -553,7 +554,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX =y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
@@ -683,10 +684,9 @@ CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
-# CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
-CONFIG_NETWORK_SECMARK=y
+# CONFIG_NETWORK_SECMARK is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
@@ -700,7 +700,6 @@ CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
-CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 # CONFIG_NF_CONNTRACK_TIMESTAMP is not set
 CONFIG_NF_CT_PROTO_DCCP=y
@@ -731,11 +730,9 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 #
 # Xtables targets
 #
-# CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
 # CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
-CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CT is not set
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
 CONFIG_NETFILTER_XT_TARGET_HL=y
@@ -749,7 +746,6 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
 # CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
 # CONFIG_NETFILTER_XT_TARGET_TRACE is not set
-CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
@@ -836,7 +832,6 @@ CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_ECN is not set
 # CONFIG_IP_NF_TARGET_TTL is not set
 CONFIG_IP_NF_RAW=y
-CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
@@ -863,7 +858,6 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 # CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
-# CONFIG_IP6_NF_SECURITY is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1128,7 +1122,7 @@ CONFIG_EEPROM_AT24=y
 # Texas Instruments shared transport line discipline
 #
 CONFIG_TI_ST=m
-CONFIG_ST_HCI=m
+# CONFIG_ST_HCI is not set
 CONFIG_ST_GPS=m
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
@@ -1458,6 +1452,7 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE is not set
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_ANALOG is not set
@@ -2423,6 +2418,7 @@ CONFIG_AUDIO_LISTEN_NOTIFICATION=y
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 CONFIG_HIDRAW=y
+# CONFIG_UHID is not set
 
 #
 # USB Input Devices
@@ -3045,9 +3041,8 @@ CONFIG_SENSORS_LTR558=y
 #
 # Triggers - standalone
 #
-CONFIG_XVMALLOC=y
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_XVMALLOC is not set
+# CONFIG_ZRAM is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_VIDEO_DT3155 is not set
 # CONFIG_CRYSTALHD is not set
@@ -3093,7 +3088,7 @@ CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_FS_POSIX_ACL=y
-CONFIG_EXT4_FS_SECURITY=y
+# CONFIG_EXT4_FS_SECURITY is not set
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
@@ -3361,26 +3356,11 @@ CONFIG_ARM_UNWIND=y
 #
 # CONFIG_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
-CONFIG_SECURITY=y
+# CONFIG_SECURITY is not set
 # CONFIG_SECURITYFS is not set
-CONFIG_SECURITY_NETWORK=y
-# CONFIG_SECURITY_NETWORK_XFRM is not set
-# CONFIG_SECURITY_PATH is not set
-CONFIG_LSM_MMAP_MIN_ADDR=4096
-CONFIG_SECURITY_SELINUX=y
-# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
-# CONFIG_SECURITY_SELINUX_DISABLE is not set
-CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
-CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
-# CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
-# CONFIG_SECURITY_TOMOYO is not set
-# CONFIG_SECURITY_APPARMOR is not set
 CONFIG_TRUSTED_FOUNDATIONS=y
-# CONFIG_IMA is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
-# CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_DEFAULT_SECURITY_DAC=y
+CONFIG_DEFAULT_SECURITY=""
 CONFIG_CRYPTO=y
 
 #
@@ -3501,7 +3481,6 @@ CONFIG_CRC32=y
 CONFIG_CRC7=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
-CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
