--- a/arch/arm/configs/custom_sense_defconfig
+++ b/arch/arm/configs/custom_sense_defconfig
@@ -321,10 +321,10 @@ CONFIG_TEGRA_SYSTEM_DMA=y
 CONFIG_TEGRA_PWM=y
 CONFIG_TEGRA_FIQ_DEBUGGER=y
 CONFIG_TEGRA_EMC_SCALING_ENABLE=y
-# CONFIG_VOLTAGE_CONTROL is not set
+CONFIG_VOLTAGE_CONTROL=y
 CONFIG_TEGRA_CPU_DVFS=y
 CONFIG_TEGRA_CORE_DVFS=y
-# CONFIG_TEGRA_3D_GPU_OVERCLOCK_520 is not set
+CONFIG_TEGRA_3D_GPU_OVERCLOCK_520=y
 CONFIG_TEGRA_IOVMM_SMMU=y
 # CONFIG_TEGRA_IOVMM_SMMU_SYSFS is not set
 CONFIG_TEGRA_IOVMM=y
@@ -379,8 +379,6 @@ CONFIG_RIL_FTRACE_DEBUG_SOCK_IOCTL=y
 CONFIG_SENSE_4_PLUS=y
 CONFIG_MEMORY_FOOTPRINT_DEBUGGING=y
 # CONFIG_HTC_PERFORMANCE_MONITOR_ALWAYS_ON is not set
-CONFIG_VOLTAGE_CONTROL=y
-CONFIG_TEGRA_3D_GPU_OVERCLOCK_520=y
 
 #
 # Processor Type
@@ -402,7 +400,7 @@ CONFIG_CPU_CP15_MMU=y
 # Processor Features
 #
 CONFIG_ARM_THUMB=y
-# CONFIG_ARM_THUMBEE is not set
+CONFIG_ARM_THUMBEE=y
 CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
@@ -1452,7 +1450,7 @@ CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_ANALOG is not set
@@ -1513,7 +1511,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_RM31080A is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3k=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_MMA8450 is not set
