--- a/arch/arm/configs/cyanogenmod_endeavoru_defconfig
+++ b/arch/arm/configs/cyanogenmod_endeavoru_defconfig
@@ -39,7 +39,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=" next_ep1 "
+CONFIG_LOCALVERSION=" next_ep2 "
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -81,6 +81,7 @@ CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_TIMER_SLACK=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
@@ -92,7 +93,7 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_NAMESPACES is not set
-# CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -181,6 +182,7 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_NOOP is not set
