--- a/arch/arm/configs/custom_sense_defconfig
+++ b/arch/arm/configs/custom_sense_defconfig
@@ -355,7 +355,8 @@ CONFIG_TEGRA_BB_XMM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER2=m
 CONFIG_HTC_SIMHOTSWAP=y
 CONFIG_REMOVE_HSIC_L3_STATE=y
-# CONFIG_TEGRA_LP1_950 is not set
+CONFIG_TEGRA_LP1_950=y
+CONFIG_NVMAP_OUTER_CACHE_MAINT_BY_SET_WAYS=y
 CONFIG_HTC_HEADSET_MGR=y
 # CONFIG_HTC_HEADSET_H2W is not set
 CONFIG_HTC_HEADSET_GPIO=y
@@ -3042,8 +3043,9 @@ CONFIG_SENSORS_LTR558=y
 #
 # Triggers - standalone
 #
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_VIDEO_DT3155 is not set
 # CONFIG_CRYSTALHD is not set
